my-site/app/globals.css
body {
  background: var(--col-bg);
  color: var(--col-text);
  font-family: Arial, Helvetica, sans-serif;
  max-width: 100%;
  width:100%;
  overflow-x: hidden;
}

@media(max-width: 768px) {
  html, body {
    overflow-x: hidden;
  }

  html {
    position:relative;
  }
}

